<resources>
    <string name="app_name">TripDiary</string>
    <string name="title_activity_main">TripDiary</string>
    <string name="title_activity_view">Trips</string>
    <string name="title_activity_view_point">ViewPointActivity</string>
    <string name="imagebutton_description">imagebutton</string>
    <string name="History">History</string>
    <string name="Name">Name</string>
    <string name="Title">Title</string>
    <string name="Location">Location</string>
    <string name="Altitude">Altitude</string>
    <string name="Time">Time</string>
    <string name="Start_Trip">Start Trip</string>
    <string name="title_activity_play_point">PlayPointActivity</string>
    <string name="title_activity_preference">Preference</string>
    <string name="Category_Name">Category Name</string>
    <string name="Color">Color</string>
    <string name="Note">Note</string>
    <string name="Category">Category</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string-array name="speed">
        <item>Very Slow</item>
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
        <item>Very Fast</item>
    </string-array>
    <string-array name="speed_play_trip_values">
        <item>50</item>
        <item>20</item>
        <item>10</item>
        <item>5</item>
        <item>2</item>
    </string-array>
    <string-array name="speed_play_poi_values">
        <item>5000</item>
        <item>2000</item>
        <item>1000</item>
        <item>500</item>
        <item>200</item>
    </string-array>
    <string-array name="play_view_type">
        <item>Normal</item>
        <item>SkyView</item>
    </string-array>
    <string-array name="play_view_type_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="cost_types">
        <item>Food</item>
        <item>Lodging</item>
        <item>Transportation</item>
        <item>Other</item>
        <item>Ticket</item>
    </string-array>
    <string-array name="distance_units">
        <item>Kilometer</item>
        <item>Mile</item>
    </string-array>
    <string-array name="distance_units_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="altitude_units">
        <item>Meter</item>
        <item>Foot</item>
    </string-array>
    <string-array name="altitude_units_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="resolutions">
        <item>1920x1080</item>
        <item>1280x720</item>
        <item>640x480</item>
    </string-array>
    <string-array name="fpss">
        <item>60</item>
        <item>30</item>
        <item>25</item>
        <item>15</item>
    </string-array>
    <string name="habit_of_adding_poi">Habit of adding POI</string>
    <string-array name="habit_of_adding_poi_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_category">Categories</string>
    <string name="input_the_poi_title">Input the POI title</string>
    <string name="finish">Finish</string>
    <string name="input_diary">Write Diary</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_category">Edit Category</string>
    <string name="cannot_add_nocategory">Cannot add uncategorized</string>
    <string name="cannot_delete_nocategory">Cannot delete uncategorized</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="input_the_trip_name">Input the Trip Name</string>
    <string name="explain_same_trip">There is a same trip in history.Do you want to continue that trip?</string>
    <string name="explain_conflict_trip">There is a same trip.Please use another name.</string>
    <string name="add_poi">Add POI</string>
    <string name="explain_same_trip_when_import">There is a same trip in history.Please use another name</string>
    <string name="select_the_gpx">Select the .gpx</string>
    <string name="search_trip">Search Trip</string>
    <string name="trip_not_found">Trip not found</string>
    <string name="choose_the_trip">Choose the trip</string>
    <string name="be_careful">Be careful</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="search_poi">Search POI</string>
    <string name="poi_not_found">POI not found</string>
    <string name="choose_the_poi">Choose the POI</string>
    <string name="analysis_gpx">Analyzing .gpx</string>
    <string name="invalid_gpx_file">Invalid gpx file</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="total_time">Total Time</string>
    <string name="distance">Distance</string>
    <string name="average_speed">Average Speed</string>
    <string name="poi">POI</string>
    <string name="filename">Filename</string>
    <string name="share_diary">Share Diary</string>
    <string name="statistics">Statistics</string>
    <string name="import_trip_with_gpx">Import trip with .gpx</string>
    <string name="import_pictures">Import pictures</string>
    <string name="import_videos">Import videos</string>
    <string name="import_audios">Import audios</string>
    <string name="play_music">Play Music</string>
    <string name="play_background_music">Play background music when playing trip</string>
    <string name="dont_play_background_music">Don\'t play background music when playing trip</string>
    <string name="music_path">Music Path</string>
    <string name="select_music_path">Select music path for playing</string>
    <string name="playing_trip_speed">Playing Trip Speed</string>
    <string name="select_speed">Select Speed</string>
    <string name="play_trip_speed_summary">The dot moving speed when playing trip</string>
    <string name="playing_poi_speed">Playing POI Speed</string>
    <string name="play_poi_speed_summary">The speed when playing POI</string>
    <string name="track_color">Track Color</string>
    <string name="display_setting">Display Setting</string>
    <string name="trip_category">Trip Category</string>
    <string name="manage_category">Manage Category</string>
    <string name="manage_category_summary">Manage trip category</string>
    <string name="others">Others</string>
    <string name="diary_font">Diary Font</string>
    <string name="invalid_font">Invalid font</string>
    <string name="diary_font_size">Diary Font Size</string>
    <string name="please_enable_the_gps_provider">Please enable the gps provider</string>
    <string name="share">Share</string>
    <string name="select_diary_font">Select dairy font</string>
    <string name="select_poi">Select POI</string>
    <string name="backup">Back up</string>
    <string name="restore_trip">Restore trip</string>
    <string name="select_the_file_to_restore">Select the file to restore(.zip)</string>
    <string name="there_is_a_same_poi">There is a same POI</string>
    <string name="play_setting">Play Setting</string>
    <string name="playing_trip_mode">Playing Trip Mode</string>
    <string name="select_all">Select all</string>
    <string name="eraser_mode">Eraser Mode</string>
    <string name="brush_mode">Brush Mode</string>
    <string name="title_activity_paint">Paint</string>
    <string name="thickness">Thickness</string>
    <string name="emboss">Emboss</string>
    <string name="blur">Blur</string>
    <string name="clear_cache">Clear cache</string>
    <string name="cache_has_been_cleared">Cache has been cleared</string>
    <string name="back_up_setting">Back up setting</string>
    <string name="restore_setting">Restore setting</string>
    <string name="setting_has_been_backed_up">Setting has been backed up</string>
    <string name="setting_has_been_restored">Setting has been restored</string>
    <string name="select_the_picture_by">Select the picture by</string>
    <string name="select_the_video_by">Select the video by</string>
    <string name="select_the_audio_by">Select the audio by</string>
    <string name="max_speed">Max Speed</string>
    <string name="total_ascent">Total Ascent</string>
    <string name="max_altitude">Max Altitude</string>
    <string name="min_altitude">Min Altitude</string>
    <string name="velocity">Velocity</string>
    <string name="has_not_been_installed">has not been installed</string>
    <string name="do_you_want_to_install">Do you want to install?</string>
    <string name="street_view">StreetView Service</string>
    <string name="trip_has_been_stopped">Trip has been stopped</string>
    <string name="explain_how_to_use_street_view">Adjust map to let the man stand on a street and click the man.</string>
    <string name="cost">Cost</string>
    <string name="cost_type">Cost Type</string>
    <string name="food">Food</string>
    <string name="lodging">Lodging</string>
    <string name="transportation">Transportation</string>
    <string name="other">Other</string>
    <string name="play">Play</string>
    <string name="total_cost">Total Cost</string>
    <string name="accuracy">Accuracy</string>
    <string name="location_not_found">Location not found</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="record_setting">Record Setting</string>
    <string name="record_duration">Record Time Interval</string>
    <string name="duration_between_record_each_location">Minimum time interval between record locations (in milliseconds)</string>
    <string name="update_duration">Update Time Interval</string>
    <string name="duration_between_update_the_notification">Minimum time interval between notification updates(in milliseconds)</string>
    <string name="diary">Diary</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="sound">Sound</string>
    <string name="share_track_by...">Share track by…</string>
    <string name="root_path">Root Path</string>
    <string name="import_memory">Import memory</string>
    <string name="update_trip_timezone">Update trip timezone</string>
    <string name="update_all_trips_timezone_by_the_first_location_in_the_track">Update all trips timezone according to the first location in the track</string>
    <string name="local_trips">Local Trips</string>
    <string name="remote_public_trips">Cloud Public Trips</string>
    <string name="remote_personal_trips">Cloud Personal Trips</string>
    <string name="download">Download</string>
    <string name="toggle_public">Toggle public</string>
    <string name="account">Account</string>
    <string name="upload">Upload</string>
    <string name="map">Map</string>
    <string name="move_to_category">Move to category</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="kilometer_or_mile">Kilometer or Mile</string>
    <string name="altitude_unit">Altitude Unit</string>
    <string name="meter_or_ft">Meter or Foot</string>
    <string name="shake_to_add_poi">Shake to add POI</string>
    <string name="shake_to_add_poi_during_recording_trip">Shake cell phone to add POI during recording trip(Turn on screen before shake)</string>
    <string name="together_view">Together view</string>
    <string name="print">Print</string>
    <string name="move_to">Move to</string>
    <string name="generate_video">Generate Video</string>
    <string name="record_distance_interval">Record Distance Interval</string>
    <string name="minimum_distance_between_record_localtions">Minimum distance between record locations (in meters)</string>
    <string name="google_drive">Google Drive</string>
    <string name="calendar">Calendar</string>
    <string name="Weather">Weather</string>
</resources>