<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/local"
            android:checked="true"
            android:icon="@drawable/ic_storage"
            android:title="@string/local_trips" />
        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_event"
            android:title="@string/calendar" />
        <item
            android:id="@+id/cloudPersonal"
            android:icon="@drawable/ic_cloud"
            android:title="@string/remote_personal_trips" />
        <item
            android:id="@+id/cloudPublic"
            android:icon="@drawable/ic_cloud"
            android:title="@string/remote_public_trips" />
        <item
            android:id="@+id/drive"
            android:icon="@drawable/ic_cloud"
            android:title="@string/google_drive" />
    </group>
</menu>