<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_download"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/download"/>
    <item
        android:id="@+id/edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/edit"/>
    <item
        android:id="@+id/togglepublic"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/toggle_public"/>
    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/delete"/>
    <item
        android:id="@+id/selectall"
        android:icon="@drawable/ic_check"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/select_all"/>
    

</menu>