<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchviewmap"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/search_poi"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="never|collapseActionView" />
    <item
        android:id="@+id/clearcache"
        android:orderInCategory="100"
        android:title="@string/clear_cache"
        app:showAsAction="never" />
    <item
        android:id="@+id/sharetrackby"
        android:orderInCategory="100"
        android:title="@string/share_track_by..."
        app:showAsAction="never" />
    <item
        android:id="@+id/generateVideo"
        android:orderInCategory="100"
        android:title="@string/generate_video"
        app:showAsAction="never" />
    <item
        android:id="@+id/importmemory"
        android:orderInCategory="100"
        android:title="@string/import_memory"
        app:showAsAction="never" />

    <item
        android:id="@+id/backup"
        android:orderInCategory="100"
        android:title="@string/backup"
        app:showAsAction="never" />

</menu>