<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/selectall"
        android:title="@string/select_all"
        android:orderInCategory="100"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom" />

</menu>