<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="@dimen/dialog_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thickness"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/thickness"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkemboss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emboss" />

    <CheckBox
        android:id="@+id/checkeblur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blur" />

</LinearLayout>